GROUNDWORK-1688 Refactor Timestamp to support json tag `omitempty`
